# rtype

./: .bazelrc  .clangd  .dockerignore  .env.example  .envrc  .gitignore  BUILD.bazel  CLAUDE.md  CMakeLists.txt  ECS_EVOLUTION.md  ECS_INTEGRATION_PLAN.md  ECS_INTEGRATION_RESULT.md  Jenkinsfile  Jenkinsfile.localInstance  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-rtype  bazel-testlogs  claude.py  diplome.md  flake.nix  issues.md  lsan.supp  main.py  mkdocs.yml  sonar-project.properties  vcpkg.json
docs/: index.md  (+11 more)
src/client/: CMakeLists.txt  main.cpp  main.hpp
src/client/boot/: Boot.cpp
src/client/core/: Clock.hpp  Engine.cpp  Game.cpp  Game.hpp  GameLoop.cpp  Logger.cpp  RTypeGame.cpp  RTypeGame.hpp
src/client/ecs/: Entity.hpp  SparseSet.hpp
src/client/ecs/components/: Animation.hpp  Collider.hpp  Components.hpp  Missile.hpp  NetworkId.hpp  Sprite.hpp
src/client/ecs/systems/: AnimationSystem.hpp  CollisionSystem.hpp  InterpolationSystem.hpp  MissileSystem.hpp  MovementSystem.hpp  RenderSystem.hpp
src/client/graphic/: Graphic.cpp
src/client/graphics/: AssetManager.hpp  Starfield.cpp  Starfield.hpp
src/client/implementations/sfml/: AssetManager.cpp  SFMLRenderer.cpp  SFMLTexture.cpp  SFMLWindow.cpp
src/client/include/accessibility/: AccessibilityConfig.hpp  ColorblindShaderManager.hpp
src/client/include/audio/: AudioManager.hpp  OpusCodec.hpp  VoiceChatManager.hpp
src/client/include/boot/: Boot.hpp
src/client/include/components/: ComponentManager.hpp  IComponent.hpp  Position.hpp
src/client/include/config/: ServerConfigManager.hpp
src/client/include/core/: ConnectionState.hpp  DynamicLib.hpp  Engine.hpp  Game.hpp  GameLoop.hpp  IEngine.hpp  IGameLoop.hpp  IRenderer.hpp  Logger.hpp  RTypeGame.hpp  Version.hpp
src/client/include/ecs/: EntityManager.hpp  Registry.hpp  System.hpp  Types.hpp
src/client/include/events/: Event.hpp  Signal.hpp
src/client/include/gameplay/: EntityManager.hpp  GameObject.hpp  Missile.hpp  Spaceship.hpp
src/client/include/graphic/: Graphic.hpp  IGraphic.hpp
src/client/include/graphics/: Asset.hpp  Graphics.hpp  IDrawable.hpp  IGraphicPlugin.hpp  ITexture.hpp  IWindow.hpp
src/client/include/network/: NetworkEvents.hpp  NetworkSystem.hpp  Protocol.hpp  TCPClient.hpp  UDPClient.hpp
src/client/include/scenes/: BreakoutScene.hpp  ConnectionScene.hpp  FriendsScene.hpp  GameScene.hpp  IScene.hpp  LeaderboardScene.hpp  LobbyScene.hpp  LoginScene.hpp  MainMenuScene.hpp  PrivateChatScene.hpp  RoomBrowserScene.hpp  SceneManager.hpp  SettingsScene.hpp
src/client/include/system/: MovementSystem.hpp
src/client/include/ui/: Button.hpp  IButton.hpp  IUIElement.hpp  ServerConfigPanel.hpp  StarfieldBackground.hpp  TextInput.hpp
src/client/include/utils/: Platform.hpp  Vecs.hpp
src/client/network/: NetworkSystem.cpp  NetworkSystem.hpp  Protocol.hpp  TCPClient.cpp  UDPClient.cpp  UDPClient.hpp
src/client/scenes/: GameScene.cpp  LoginScene.cpp  SceneManager.cpp
src/client/src/accessibility/: AccessibilityConfig.cpp  ColorblindShaderManager.cpp
src/client/src/audio/: AudioManager.cpp  OpusCodec.cpp  VoiceChatManager.cpp
src/client/src/boot/: Boot.cpp
src/client/src/config/: ServerConfigManager.cpp
src/client/src/core/: DynamicLib.cpp  Engine.cpp  GameLoop.cpp  Logger.cpp
src/client/src/gameplay/: EntityManager.cpp  GameObject.cpp  Missile.cpp
src/client/src/graphics/: Graphics.cpp
src/client/src/network/: TCPClient.cpp  UDPClient.cpp
src/client/src/scenes/: BreakoutScene.cpp  ConnectionScene.cpp  FriendsScene.cpp  GameScene.cpp  LeaderboardScene.cpp  LobbyScene.cpp  LoginScene.cpp  MainMenuScene.cpp  PrivateChatScene.cpp  RoomBrowserScene.cpp  SceneManager.cpp  SettingsScene.cpp
src/client/src/ui/: Button.cpp  ServerConfigPanel.cpp  StarfieldBackground.cpp  TextInput.cpp
src/client/ui/: Button.cpp
src/common/: BUILD.bazel
src/common/collision/: AABB.hpp
src/common/compression/: Compression.hpp
src/common/protocol/: Protocol.hpp
src/server/: BUILD.bazel  CMakeLists.txt  main.cpp
src/server/application/services/: AchievementChecker.cpp
src/server/application/use_cases/: MovePlayerUseCase.cpp
src/server/domain/entities/: Player.cpp  Room.cpp  User.cpp
src/server/domain/exceptions/: DomainException.cpp  HealthException.cpp  PositionException.cpp
src/server/domain/services/: CollisionRule.cpp  EnemyBehavior.cpp  GameRule.cpp
src/server/domain/value_objects/: Health.cpp  Position.cpp
src/server/include/application/: ServerApplication.hpp
src/server/include/domain/: Constants.hpp
src/server/infrastructure/boostrap/: GameBootstrap.hpp
src/server/infrastructure/bootstrap/: GameBootstrap.hpp
src/server/infrastructure/cli/: ServerCLI.cpp
src/server/infrastructure/game/: GameInstanceManager.cpp  GameWorld.cpp
src/server/infrastructure/logging/: Logger.cpp
src/server/infrastructure/network/: NetworkStats.cpp
src/server/infrastructure/room/: RoomManager.cpp
src/server/infrastructure/session/: SessionManager.cpp
src/server/infrastructure/social/: FriendManager.cpp
src/server/scripts/: deploy-service.py  rtype-deploy.service  rtype_server.service  server-wrapper.py
tests/client/: CMakeLists.txt  main.cpp
tests/client/accessibility/: AccessibilityConfigTest.cpp
tests/client/audio/: AudioDevicePersistenceTest.cpp  PortAudioTest.cpp  VoiceAudioTest.cpp  VoiceIntegrationTest.cpp
tests/client/config/: ServerConfigManagerTest.cpp
tests/client/ui/: ServerConfigPanelTest.cpp
tests/client/utils/: SignalTest.cpp  VecsTest.cpp
tests/server/: CMakeLists.txt  main.cpp
tests/server/ecs/: ComponentPoolTest.cpp  ComponentTagsTest.cpp  DomainBridgeTest.cpp  ECSIntegrationTest.cpp  ECSPhase2IntegrationTest.cpp  ECSPhase48IntegrationTest.cpp  PlayerComponentsTest.cpp
tests/server/game/: BitDeviceSystemTest.cpp  GameplayTest.cpp  PauseSystemTest.cpp  PlayerStateExtendedTest.cpp  PowerUpMechanicsTest.cpp  WeaponLevelSystemTest.cpp
tests/server/network/: FriendsProtocolTest.cpp  ProtobufTest.cpp  TCPIntegrationTest.cpp  UDPIntegrationTest.cpp  VoiceProtocolTest.cpp
(+583 files in other folders)
